--- a/Implementacija/games/templates/games/scoreboard.html
+++ b/Implementacija/games/templates/games/scoreboard.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col player2 d-flex align-items-center justify-content-center">
         <span class="score">
-            {{ orange_player.user.username }}: <span id="blue-player-score">0</span>
+            {{ orange_player.user.username }}: <span id="orange-player-score">0</span>
         </span>
     </div>
 </div>
