dopunjena druga i treca igra
Change-Id: I1c0c505309776abf98d420b00fac6464edc03999

--- a/Implementacija/games/templates/games/game2.html
+++ b/Implementacija/games/templates/games/game2.html
@@ -24,6 +24,25 @@
         color: #F3EEDB;
     }
 
+    #game2-answer {
+        border: 2px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+        color: #333;
+        background-color: #F3EEDB;
+        outline: none;
+        transition: border-color 0.3s, box-shadow 0.3s;
+    }
+
+    #game2-answer:focus {
+        border-color: #1B6C8C;
+        box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    }
+
+    #game2-answer:hover {
+        border-color: #F2B441;
+    }
+
     
 </style>
 <div class="row mt-5">
