--- a/Implementacija/games/templates/games/game2.html
+++ b/Implementacija/games/templates/games/game2.html
@@ -1,3 +1,7 @@
+<!--
+    Ivan Cancar 2021/0604
+    Sanja Drobnjak 2021/0492
+-->
 <style>
     #game2-helper1{
         font-family: "Titan One", sans-serif;
