--- a/Implementacija/games/templates/games/game4.html
+++ b/Implementacija/games/templates/games/game4.html
@@ -1,50 +1,95 @@
-<div class="row text-center my-3">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit est animi ea cumque reprehenderit veritatis
-    velit asperiores sint. Necessitatibus qui quae aut incidunt asperiores esse nesciunt ut, voluptate veritatis
-    quod!
-</div>
-<div class="text-center w-25 mx-auto">
-    <div class="row">
-        <div class="col"><button>a</button></div>
-        <div class="col"><button>1</button></div>
+<style>
+    .item {
+        /*padding: 10px;
+        margin: 5px;*/
+        border: 1px solid black;
+        cursor: pointer;
+    }
+    .item button {
+    width: 100%;
+    }
+
+    body {     
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .selected {
+        background-color: yellow;
+    }
+    .matched {
+        background-color: green;
+        pointer-events: none;
+    }
+    .mismatched {
+        background-color: red;
+        pointer-events: none;
+    }
+
+    #player-message {
+        font-family: "Titan One", sans-serif;
+        font-size: 25px;
+        color: #1B6C8C;
+        text-align: center;
+    }
+    #opisPojmova {
+        font-family: "Titan One", sans-serif;
+        font-size: 25px;
+        color: #1B6C8C;
+        text-align: center;
+    }
+    button {
+        width: 200px;
+    }
+</style>
+<div  class="game4-container">
+    <div class="text-center w-50 mx-auto">
+        <p id="player-message"></p>
+        <div class="row text-center my-3" id="opisPojmova"></div>
+        <div id="board4"></div>
+        <div class="row">
+            <div class="col"><button id="0"></button></div>
+            <div class="col"><button id="10"></button></div>
+        </div>
+        <div class="row">
+            <div class="col"><button id="1"></button></div>
+            <div class="col"><button id="11"></button></div>
+        </div>
+        <div class="row">
+            <div class="col"><button id="2"></button></div>
+            <div class="col"><button id="12"></button></div>
+        </div>
+        <div class="row">
+            <div class="col"><button id="3"></button></div>
+            <div class="col"><button id="13"></button></div>
+        </div>
+        <div class="row">
+            <div class="col"><button id="4"></button></div>
+            <div class="col"><button id="14"></button></div>
+        </div>
+        <div class="row">
+            <div class="col"><button id="5"></button></div>
+            <div class="col"><button id="15"></button></div>
+        </div>
+        <div class="row">
+            <div class="col"><button id="6"></button></div>
+            <div class="col"><button id="16"></button></div>
+        </div>
+        <div class="row">
+            <div class="col"><button id="7"></button></div>
+            <div class="col"><button id="17"></button></div>
+        </div>
+        <div class="row">
+            <div class="col"><button id="8"></button></div>
+            <div class="col"><button id="18"></button></div>
+        </div>
+        <div class="row">
+            <div class="col"><button id="9"></button></div>
+            <div class="col"><button id="19"></button></div>
+        </div>
     </div>
-    <div class="row">
-        <div class="col"><button>b</button></div>
-        <div class="col"><button>2</button></div>
+    <div class="row w-25 mx-auto mt-5">
+        <button class="btn btn-primary w-100">Potvrdi</button>
     </div>
-    <div class="row">
-        <div class="col"><button>c</button></div>
-        <div class="col"><button>3</button></div>
-    </div>
-    <div class="row">
-        <div class="col"><button>d</button></div>
-        <div class="col"><button>4</button></div>
-    </div>
-    <div class="row">
-        <div class="col"><button>e</button></div>
-        <div class="col"><button>5</button></div>
-    </div>
-    <div class="row">
-        <div class="col"><button>f</button></div>
-        <div class="col"><button>6</button></div>
-    </div>
-    <div class="row">
-        <div class="col"><button>g</button></div>
-        <div class="col"><button>7</button></div>
-    </div>
-    <div class="row">
-        <div class="col"><button>h</button></div>
-        <div class="col"><button>8</button></div>
-    </div>
-    <div class="row">
-        <div class="col"><button>i</button></div>
-        <div class="col"><button>9</button></div>
-    </div>
-    <div class="row">
-        <div class="col"><button>j</button></div>
-        <div class="col"><button>10</button></div>
-    </div>
-</div>
-<div class="row w-25 mx-auto mt-5">
-    <button class="btn btn-primary">Potvrdi</button>
 </div>
