izmena u funkcijama za kraj partije igre Umrezavanje
Change-Id: I73b2dc322b367615e40693c777b04428007fc688

--- a/Implementacija/games/templates/games/game4.html
+++ b/Implementacija/games/templates/games/game4.html
@@ -27,9 +27,9 @@
         pointer-events: none;
     }
 
-    #player-message {
+    #player-message4 {
         font-family: "Titan One", sans-serif;
-        font-size: 25px;
+        font-size: 15px;
         color: #1B6C8C;
         text-align: center;
     }
@@ -39,7 +39,7 @@
         color: #1B6C8C;
         text-align: center;
     }
-    button {
+    .game4-container button {
         width: 200px;
         height: 30px;
     }
@@ -90,5 +90,6 @@
             <div class="col"><button id="19">{{ shuffled_answers.9.answer }}</button></div>
         </div>
         <!-- <br> <br> <button onclick="shuffleColumn()">Shuffle Columns</button> -->
+        <!-- <a href="{ url 'game5' }"> <button type="button">Preskoči na Narednu Stranicu</button> </a> dodati %-->
     </div>
 </div>
